style.css
body {
   background-color: hsl(185, 75%, 39%);
   background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
   background-repeat: no-repeat;
   background-position: right 52vw bottom 30vh,left 50vw  top 48vh;
   font-family: 'Kumbh Sans', sans-serif;
   font-size: 18px;
   padding: 150px 0 0;
}

.card {
   margin: 0 auto;
   width: 350px;
   background-color: #fff;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 10px 10px 65px -14px rgba(0,0,0,0.44);
   -webkit-box-shadow: 10px 10px 65px -14px rgba(0,0,0,0.44);
   -moz-box-shadow: 10px 10px 65px -14px rgba(0,0,0,0.44);
}

.card > .cardImage {
   background-image: url(./images/bg-pattern-card.svg);
   height: 140px;
}

.card > img.profile {
   border-radius: 50%;
   display: block;
   margin: 0 auto;
   margin-top: -50px;
   border: 5px solid #fff;
}

.card > .wrapper-text-profile {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
}

.card .name-age {
   margin-bottom: 10px;
}

.card .name {
   font-weight: bold;
   margin-right: 5px;
   color: hsl(229, 23%, 23%);
}

.card .city {
   text-align: center;
   font-size: 14px;
}

.card .age, .card .city {
   color: hsl(0, 0%, 59%);
} 

.card .info-flp {
   display: flex;
   list-style: none;
   justify-content: space-evenly;
   padding: 25px 0;
   margin: 0;
   border-top: 0.1px solid hsl(0, 0%, 81%);
}

.card .info-flp {
   text-align: center;
}

.card > ul.flp span {
   display: block;
   text-align: center;
   padding: 2px;
}

.card .info-flp .flp-value {
   font-weight: bold;
   color: hsl(229, 23%, 23%);
   margin-bottom: 5px;
}

.card .info-flp .flp-name  {
   font-size: 12px;
   color:hsl(0, 0%, 59%);
}

footer {
   position: absolute;
   bottom: 10px;
   left: 0;
   right: 0;
}

